# facebook-oauth2-example

./: .gitignore  App.hs  Config.hs  Facebook.hs  Main.hs  facebook-oauth2-example.cabal
config/: facebook.example.yml
views/: index.mustache
